--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -5,24 +5,23 @@
     display: flex;
     align-items: center;
     justify-content: left;
-    font-family: "Arial", sans-serif;
     background: var(--primary-color);
     gap: 2vw;
     margin: 0;
     padding: 0;
 }
 
-
 .logo {
-
-    transition: transform 0.2s ease-in-out;
+    transition: transform 0.2s ease-in-out, color 0.2s ease-in-out;
     text-decoration: none;
     color: var(--main-words-color);
-    font-size: 4vh;  /* Adjust the base size */
-    display: inline-block; /* Prevents jumpy effect */
+    font-size: 2rem;
+    display: inline-block;
+    margin-bottom: 3vh;
 }
 
 .logo:hover {
+    color: var(--secondary-color);
     transform: scale(1.1);
 }
 
@@ -35,14 +34,13 @@
 }
 
 .menu-icon svg {
-    height: 4vh; /* Adjust height */
-    fill: var(--main-words-color); /* Use your custom color */
+    height: 4vh;
+    fill: var(--main-words-color);
     transition: fill 0.2s ease-in-out;
 }
 
 .menu-icon:hover svg {
-    fill: var(--secondary-color); /* Change color on hover */
-
+    fill: var(--secondary-color);
 }
 
 
