--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -1,25 +1,35 @@
+/* Global Colors & Styles*/
 :root {
-  --primary-color: #026C1E;
-  --secondary-color: #E9E3D5;
-  --background-color: #FFF8E9;
-  --main-words-color: white;
+    --primary-color: #026C1E;
+    --secondary-color: #E9E3D5;
+    --background-color: #FFF8E9;
+    --main-words-color: white;
 }
 
-/* Global Styles */
 body {
-  font-family: "Arial", sans-serif;
-  background-color: #f4f4f4;
-  margin: 0;
-  padding: 0;
+    font-family: "Arial", sans-serif;
+    background-color: var(--background-color);
+    margin: 0;
+    padding: 0;
 }
 
-/* Text Styling */
-h1, h2, h3 {
-  color: var(--primary-color);
+h1{
+    color: var(--primary-color);
+    font-size: 4rem;
 }
 
+/* Move main content when sidebar opens*/
+main {
+    transition: margin-left 0.3s ease;
+    margin-left: 0;
+    display: flex;
+    justify-content: center;
+}
+
+main.sidebar-open {
+    margin-left: 150px;
+}
 
 a {
-  text-decoration: none;
-  color: inherit;
+    text-decoration: none;
 }
